[gd_scene load_steps=56 format=2]

[ext_resource path="res://Shaders/JitterFreePixelArt.tres" type="Material" id=1]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Shaders/DamageFlash.shader" type="Shader" id=3]
[ext_resource path="res://Entities/Player/AimingLaser.gd" type="Script" id=4]
[ext_resource path="res://Entities/Player/Weapons/WeaponManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Raw Resources/Sprites/Shit Sprites/light.png" type="Texture" id=6]
[ext_resource path="res://Raw Resources/Sprites/Shadows/LargeShadow Animated.png" type="Texture" id=7]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Player/MeleeHitbox.gd" type="Script" id=9]
[ext_resource path="res://Raw Resources/Sprites/Characters/Red/walk.png" type="Texture" id=10]
[ext_resource path="res://Entities/Player/PickupZone.gd" type="Script" id=11]
[ext_resource path="res://Entities/Player/Hurtbox.tscn" type="PackedScene" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/MeleeHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.201, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 6, 6, 6, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/MeleeHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 12, 12, 12, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/MeleeHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 18, 18, 18, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/MeleeHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "FlashDamage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=13]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=35]
states/Attack/node = SubResource( 20 )
states/Attack/position = Vector2( 603, 150 )
states/Idle/node = SubResource( 25 )
states/Idle/position = Vector2( 603, 55 )
states/Walk/node = SubResource( 30 )
states/Walk/position = Vector2( 758, 55 )
transitions = [ "Idle", "Walk", SubResource( 31 ), "Walk", "Idle", SubResource( 32 ), "Idle", "Attack", SubResource( 33 ), "Attack", "Idle", SubResource( 34 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 38, 26 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 38, 0, 38, 26 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "shadow",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=40]
radius = 10.9999
height = 18.0001

[sub_resource type="CapsuleShape2D" id=41]
radius = 8.5
height = 4.72201

[sub_resource type="CircleShape2D" id=42]
radius = 112.134

[sub_resource type="Gradient" id=43]
offsets = PoolRealArray( 0, 0.970874, 1 )
colors = PoolColorArray( 0.788235, 0, 0, 0, 0.745098, 0, 0, 1, 1, 0, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
material = SubResource( 1 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 1 )
use_parent_material = true
texture = ExtResource( 10 )
offset = Vector2( 0, -9 )
hframes = 24

[node name="Collider" type="CollisionShape2D" parent="." groups=[
"Player",
]]
position = Vector2( 0.5, 2 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleDown"
playback_speed = 0.3
anims/AttackDown = SubResource( 3 )
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/AttackUp = SubResource( 6 )
anims/FlashDamage = SubResource( 7 )
anims/IdleDown = SubResource( 8 )
anims/IdleLeft = SubResource( 9 )
anims/IdleRight = SubResource( 10 )
anims/IdleUp = SubResource( 11 )
anims/WalkDown = SubResource( 12 )
anims/WalkLeft = SubResource( 13 )
anims/WalkRight = SubResource( 14 )
anims/WalkUp = SubResource( 15 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 36 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Walk/blend_position = Vector2( 0, 1 )

[node name="ShadowAnimation" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
show_behind_parent = true
position = Vector2( 0, 8 )
scale = Vector2( 0.75, 0.4 )
frames = SubResource( 39 )
animation = "shadow"
frame = 1

[node name="HitboxPivot" type="Position2D" parent="."]
visible = false
position = Vector2( 4, 0 )
rotation = 3.14159

[node name="MeleeHitbox" parent="HitboxPivot" instance=ExtResource( 8 )]
position = Vector2( 15, 0 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 9 )

[node name="CollisionShape2D" parent="HitboxPivot/MeleeHitbox" index="0"]
position = Vector2( -11.0001, -17 )
rotation = -1.57079
shape = SubResource( 40 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 12 )]
visible = false
collision_layer = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.5, -1 )
shape = SubResource( 41 )

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 42 )

[node name="ProjectileDelayTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ScentTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true

[node name="AimingLaser" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 23
collide_with_areas = true
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="AimingLaser"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 43 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 0.0
round_precision = 1000
antialiased = true

[node name="Tween" type="Tween" parent="AimingLaser"]

[node name="Light" type="Sprite" parent="AimingLaser"]

[node name="Light2D" type="Light2D" parent="AimingLaser/Light"]
visible = false
position = Vector2( 1, 41 )
texture = ExtResource( 6 )
color = Color( 0.705882, 0.662745, 0.560784, 1 )
shadow_color = Color( 1, 1, 1, 0 )

[node name="WeaponManager" parent="." instance=ExtResource( 5 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]

[editable path="HitboxPivot/MeleeHitbox"]

[editable path="Hurtbox"]
